# hello_world_ros2_edx

./: .gitignore  README.md  check_robot_description.sh  d.txt  hrwros.rviz  teleop_keyboard.sh
hrwros_week1/hrwros/hrwros_msgs/: CMakeLists.txt  package.xml
hrwros_week1/hrwros/hrwros_msgs/msg/: BoxHeightInformation.msg
hrwros_week1/hrwros/hrwros_week1/: package.xml  setup.cfg  setup.py
hrwros_week1/hrwros/hrwros_week1/hrwros_week1/: counter_with_delay_ac.py  counter_with_delay_as.py  metres_to_feet_client.py  metres_to_feet_server.py  sensor_info_publisher.py  sensor_info_subscriber.py  template_publisher_script.py  template_subscriber_script.py
hrwros_week1/hrwros/hrwros_week1/launch/: hrwros_week1_servers.launch.py  hrwros_welcome.launch.py
hrwros_week1/hrwros_assignments/hrwros_week1_assignment/: package.xml  setup.cfg  setup.py
hrwros_week1/hrwros_assignments/hrwros_week1_assignment/hrwros_week1_assignment/: week1_assignment1_part1.py  week1_assignment1_part3.py  week1_assignment2.py  week1_assignment3.py
hrwros_week1/hrwros_assignments/hrwros_week1_assignment/launch/: hrwros_week1_assignment3.launch.py  hrwros_week1_assignments1_2.launch.py
hrwros_week2/hrwros/hrwros_support/: CMakeLists.txt  package.xml
hrwros_week2/hrwros/hrwros_support/config/: hrwros.rviz  zeros.yaml
hrwros_week2/hrwros/hrwros_support/launch/: load_hrwros.launch.py  visualize_hrwros.launch.py
hrwros_week2/hrwros/hrwros_support/urdf/: hrwros.xacro
hrwros_week2/hrwros/hrwros_support/urdf/arm_robot/: arm_robot.urdf.xacro  arm_robot_prop.urdf.xacro
hrwros_week2/hrwros/hrwros_support/urdf/container_arm_robot_pedestal/: container_arm_robot_pedestal.urdf.xacro
hrwros_week2/hrwros/hrwros_support/urdf/robot_pedestal/: robot_pedestal.urdf.xacro
hrwros_week2/hrwros/hrwros_support/urdf/vacuum_gripper/: vacuum_gripper.urdf.xacro
hrwros_week2/hrwros/hrwros_support/urdf/workcell/: workcell.urdf.xacro
hrwros_week2/hrwros_assignments/hrwros_week2_assignment/: CMakeLists.txt  package.xml
hrwros_week3/: after_custom_turtle.gv  frames_2024-09-22_20.25.02.gv  hrwas_support.gv  spawn_total.gv  static_world_objects.gv  system.gv  system_after_control.gv
hrwros_week3/hrwros_gazebo/: CMakeLists.txt  package.xml
hrwros_week3/hrwros_gazebo/config/: controllers.yaml  r1_joint_state_controller.yaml  r2_joint_state_controller.yaml  robot1_controller.yaml  robot1_gazebo_controllers.yaml  robot1_joint_state_controller.yaml  robot1_zeros.yaml  robot2_controller.yaml  robot2_gazebo_controllers.yaml  robot2_joint_state_controller.yaml  robot_config.yaml  twist_mux_topics.yaml
hrwros_week3/hrwros_gazebo/include/hrwros_gazebo/: conveyor_spawner.h  conveyor_spawner.hpp
hrwros_week3/hrwros_gazebo/include/hrwros_gazebo/plugins/: ROSConveyorBeltPlugin.hh  ROSLogicalCameraPlugin.hh  ROSProximityRayPlugin.hh  ROSVacuumGripperPlugin.hh
hrwros_week3/hrwros_gazebo/launch/: combined_launch.py  combined_launch.xml  spawn_robots.launch.py  spawn_static_world_objects..launch.py  spawn_static_world_objects.launch.py  spawn_turtlebot.launch.py  system_status.launch.py  teleop.launch.py  turtlebot_state_publisher.launch.py
hrwros_week3/hrwros_gazebo/param/: mux.yaml
hrwros_week3/hrwros_gazebo/scripts/: env_setup.bash  timed_ros2_launch.sh  timed_ros2_run.sh
hrwros_week3/hrwros_gazebo/src/: conveyor_spawner.cpp  conveyor_spawner_node.cpp  urdf_creator.cpp  urdf_creator_test.cpp
hrwros_week3/hrwros_gazebo/src/plugins/: ROSConveyorBeltPlugin.cc  ROSLogicalCameraPlugin.cc  ROSProximityRayPlugin.cc  ROSVacuumGripperPlugin.cc  VacuumGripperPlugin.cc
hrwros_week3/hrwros_gazebo/worlds/: hrwros.world
hrwros_week3/hrwros_gazebo_interface/: CMakeLists.txt  package.xml
hrwros_week3/hrwros_gazebo_interface/msg/: Proximity.msg
hrwros_week3/hrwros_interface/: CMakeLists.txt  package.xml
hrwros_week3/hrwros_move_mobile_robot/: package.xml  setup.cfg  setup.py
hrwros_week3/hrwros_move_mobile_robot/hrwros_move_mobile_robot/: create_unknown_obstacles.py
hrwros_week3/hrwros_move_mobile_robot/launch/: move_mobile_robot_target1.launch.py  move_mobile_robot_target2.launch.py
hrwros_week3/hrwros_nav/: CMakeLists.txt  package.xml
hrwros_week3/hrwros_nav/config/: nav2_default_view.rviz  nav2_params.yaml  nav2_view.rviz
hrwros_week3/hrwros_nav/launch/: bringup_launch.py  calc_initial_pose.ipynb  localization_launch.py  navigation_launch.py  rviz_launch.py  slam_launch.py  tb3_simulation_launch.py
hrwros_week3/hrwros_slam/: CMakeLists.txt  package.xml
hrwros_week3/hrwros_slam/config/: factory_full.pgm  factory_full.yaml  factory_reduced.pgm  factory_reduced.yaml  hrwros_navigation.rviz
hrwros_week3/hrwros_slam/launch/: cartographer.launch.py
hrwros_week3/hrwros_support/: CMakeLists.txt  package.xml
hrwros_week3/hrwros_support/config/: hrwros.rviz  joint_states.yaml
hrwros_week3/hrwros_support/launch/: load_hrwros.launch.py  visualize_hrwros.launch.py
hrwros_week3/hrwros_support/rviz/: hrwros.rviz
hrwros_week3/hrwros_support/urdf/: hrwros.xacro
hrwros_week3/hrwros_support/urdf/arm_robot/: arm_description.urdf.xacro  (+4 more)
hrwros_week3/hrwros_week3/: package.xml  setup.cfg  setup.py
hrwros_week3/hrwros_week3/hrwros_week3/: create_unknown_obstacles.py
hrwros_week3/hrwros_week3/launch/: hrwros_turtlebot_navigation.launch.py
hrwros_week3/hrwros_week3_assignment/: package.xml  setup.cfg  setup.py
hrwros_week3/hrwros_week3_assignment/hrwros_week3_assignment/: week3_assignment3_part1.py  week3_assignment3_part2.py
hrwros_week3/hrwros_week3_assignment/launch/: amcl_navigation.launch.py  view_navigation.launch.py  week3_assignment3_part1.launch.py  week3_assignment3_part2.launch.py
hrwros_week3/move_mobile_robot/: package.xml  setup.cfg  setup.py
hrwros_week3/move_mobile_robot/launch/: move_mobile_robot_target1.launch.py  move_mobile_robot_target2.launch.py
hrwros_week3/move_mobile_robot/move_mobile_robot/: move_mobile_robot.py
hrwros_week3/my_python_utils/: __init__.py  package.xml  setup.cfg  setup.py
hrwros_week3/my_python_utils/my_python_utils/: helper_combination.py  some_utility.py
(+29 files in other folders)
